# COVID-19-Prediction-Agent

./: .gitignore  README.md  app.py  benchmark.ipynb  pyproject.toml
epoch1/: training.ipynb
epoch2/: trainer.ipynb
epoch3/: trainer.ipynb
